[gd_scene load_steps=19 format=3 uid="uid://b6fx656pcno7s"]

[ext_resource type="Script" uid="uid://dsdbrxhbn35w7" path="res://code/ship/modules/shield_module.gd" id="1_qfqke"]
[ext_resource type="Script" uid="uid://c47vgfakrvoxf" path="res://code/ship/modules/Shield.gd" id="2_yota5"]
[ext_resource type="AudioStream" uid="uid://c7e1p4aepud3d" path="res://art/audio/sounds/shield_applying_sound.wav" id="3_t2mx0"]
[ext_resource type="AudioStream" uid="uid://bhtfb6630u1js" path="res://art/audio/sounds/shield_shattering_sound.wav" id="4_o2yw7"]
[ext_resource type="AudioStream" uid="uid://bq3myi1evd56a" path="res://art/audio/sounds/shield_takingdmg_sound.wav" id="5_ul8cr"]
[ext_resource type="PackedScene" uid="uid://3a5vwad6lsnu" path="res://prefabs/vfx/shield_vfx.tscn" id="6_gvryf"]
[ext_resource type="Shader" uid="uid://ohokcopb2fdp" path="res://art/shaders/graphs/Shield.tres" id="7_rwr3c"]
[ext_resource type="PackedScene" uid="uid://0txf83d46q4j" path="res://prefabs/modules/functional_components/damage_controller.tscn" id="8_e18hx"]
[ext_resource type="Script" uid="uid://b1ghhc3fukfu3" path="res://code/sound/sound_emitter.gd" id="9_12yfa"]
[ext_resource type="PackedScene" uid="uid://b5ri43mxkksdw" path="res://prefabs/modules/functional_components/module_display.tscn" id="9_sdq7t"]
[ext_resource type="PackedScene" uid="uid://hs3ujnysju5o" path="res://prefabs/collision_damage_calculator.tscn" id="10_sdq7t"]

[sub_resource type="BoxShape3D" id="BoxShape3D_x6hs4"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_qjp2t"]
render_priority = 0
shader = ExtResource("7_rwr3c")
shader_parameter/anim_hit = 1.0
shader_parameter/AnimationDistance = 1.0
shader_parameter/AnimationSpeed = 2.0
shader_parameter/Offset = 0.5
shader_parameter/anim_open_close = -2.0
shader_parameter/Hit_Color = Color(1, 2, 1, 1)
shader_parameter/MainColor = Color(0, 1, 2, 1)
shader_parameter/RimColor = Color(0, 0.05, 2, 1)
shader_parameter/RimSize = 0.17
shader_parameter/BackColor = Color(0.131, 1, 1, 1)

[sub_resource type="Animation" id="Animation_w1mnr"]
resource_name = "Close"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material_override:shader_parameter/anim_open_close")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-2.0, 1.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:material_override:shader_parameter/anim_on_off")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0, 1.0]
}

[sub_resource type="Animation" id="Animation_4e2hl"]
resource_name = "Hit"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material_override:shader_parameter/anim_hit")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 0.0647044),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="Animation" id="Animation_sg6jy"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material_override:shader_parameter/anim_open_close")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-2.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:material_override:shader_parameter/anim_on_off")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-2.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:material_override:shader_parameter/anim_hit")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_22x73"]
_data = {
&"Close": SubResource("Animation_w1mnr"),
&"Hit": SubResource("Animation_4e2hl"),
&"RESET": SubResource("Animation_sg6jy")
}

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_h2lat"]
points = PackedVector3Array(-0.951058, -0.000195742, -0.011405, 0.850515, -0.525842, -1.97636e-05, -0.000186205, -1, -1.97636e-05, -0.5258, -0.850822, -1.97636e-05, -0.894456, -0.447338, -1.97636e-05, -0.951058, -0.000195742, 0.308966, -0.850702, 0.525646, -1.97636e-05, -0.425444, 0.850626, -0.00239581, -0.000186205, 1, -1.97636e-05, 0.525614, 0.850626, -1.97636e-05, 0.89427, 0.447142, -1.97636e-05, 0.723534, -0.447338, 0.525681, 0.425258, -0.850822, 0.308966, 0.425258, -0.850822, 0.00968244, 0.951058, -0.000195742, 0.00572236, 0.951058, -0.000195742, 0.308966, -0.162544, -0.850822, 0.499941, -0.688344, -0.525842, 0.499941, -0.587801, -0.000195742, 0.808926, -0.72372, 0.447142, 0.525681, -0.425444, 0.850626, 0.308966, 0.162358, 0.850626, 0.499941, 0.688158, 0.525646, 0.499941, 0.587615, -0.000195742, 0.808926, 0.262714, -0.525842, 0.808926, -0.276492, -0.447338, 0.850606, -0.000186205, -0.000195742, 1, -0.2629, 0.525646, 0.808926, 0.276306, 0.447142, 0.850606)

[node name="ShieldModule" type="CollisionShape3D" node_paths=PackedStringArray("shield", "collider", "attach_points", "sprite", "label")]
shape = SubResource("BoxShape3D_x6hs4")
script = ExtResource("1_qfqke")
shield = NodePath("Shield2")
collider = NodePath("Shield2/Shield_Collision/CollisionShape3D")
attach_points = [NodePath("AttachPoints/AttachPoint1")]
sprite = NodePath("ModuleDisplay/Sprite3D")
label = NodePath("ModuleDisplay/Label3D")
healthy_color = Color(0, 1, 0, 1)
dead_color = Color(1, 0, 0, 1)
module_name = "Shield"
description = "Activate to project protective energy field. Drains energy on activation, slowly over time, and per absorbed damage."
metadata/_custom_type_script = "uid://dsdbrxhbn35w7"

[node name="Shield2" type="Node3D" parent="." node_paths=PackedStringArray("animator", "collider")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 0, 0)
script = ExtResource("2_yota5")
animator = NodePath("Shield_VFX/AnimationPlayer")
collider = NodePath("Shield_Collision/CollisionShape3D")

[node name="Shield_VFX" parent="Shield2" instance=ExtResource("6_gvryf")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)
material_override = SubResource("ShaderMaterial_qjp2t")
skeleton = NodePath("../../..")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Shield2/Shield_VFX"]
libraries = {
&"": SubResource("AnimationLibrary_22x73")
}

[node name="Shield_Collision" type="StaticBody3D" parent="Shield2"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="Shield2/Shield_Collision"]
shape = SubResource("ConvexPolygonShape3D_h2lat")
disabled = true

[node name="Model" type="CSGBox3D" parent="."]

[node name="DamageController" parent="." instance=ExtResource("8_e18hx")]

[node name="CollisionShape3D" type="CollisionShape3D" parent="DamageController/Damageable" index="0"]
shape = SubResource("BoxShape3D_x6hs4")

[node name="ModuleDisplay" parent="." instance=ExtResource("9_sdq7t")]

[node name="AttachPoints" type="Node3D" parent="."]

[node name="AttachPoint1" type="Node3D" parent="AttachPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -9.03911e-08, 0, -0.533954)
metadata/_edit_group_ = true

[node name="CollisionDamageCalculator" parent="." node_paths=PackedStringArray("damageable", "shape") instance=ExtResource("10_sdq7t")]
damageable = NodePath("../DamageController/Damageable")
shape = NodePath("..")

[node name="Sounds" type="Node3D" parent="."]

[node name="SoundEmitterActivated" type="AudioStreamPlayer3D" parent="Sounds"]
stream = ExtResource("3_t2mx0")
max_polyphony = 5
script = ExtResource("9_12yfa")
min_pitch_scale = 0.9
max_pitch_scale = 1.1
metadata/_custom_type_script = "uid://b1ghhc3fukfu3"

[node name="SoundEmitterDeactivated" type="AudioStreamPlayer3D" parent="Sounds"]
stream = ExtResource("4_o2yw7")
max_polyphony = 5
script = ExtResource("9_12yfa")
min_pitch_scale = 0.9
max_pitch_scale = 1.1
metadata/_custom_type_script = "uid://b1ghhc3fukfu3"

[node name="SoundEmitterBroken" type="AudioStreamPlayer3D" parent="Sounds"]
stream = ExtResource("4_o2yw7")
max_polyphony = 5
script = ExtResource("9_12yfa")
min_pitch_scale = 0.9
max_pitch_scale = 1.1
metadata/_custom_type_script = "uid://b1ghhc3fukfu3"

[node name="SoundEmitterDamaged" type="AudioStreamPlayer3D" parent="Sounds"]
stream = ExtResource("5_ul8cr")
max_polyphony = 20
script = ExtResource("9_12yfa")
min_pitch_scale = 0.8
max_pitch_scale = 1.2
metadata/_custom_type_script = "uid://b1ghhc3fukfu3"

[connection signal="activated" from="." to="Sounds/SoundEmitterActivated" method="start_playing"]
[connection signal="deactivated" from="." to="Sounds/SoundEmitterDeactivated" method="start_playing"]
[connection signal="shield_broken" from="." to="Sounds/SoundEmitterBroken" method="start_playing"]
[connection signal="shield_damaged" from="." to="Sounds/SoundEmitterDamaged" method="start_playing"]
[connection signal="damaged" from="DamageController" to="." method="take_damage"]

[editable path="DamageController"]
[editable path="ModuleDisplay"]
